=================================================================
## v0.32
=================================================================

-----------------------------------------------------------------
## Attributes:


-----------------------------------------------------------------
## Win condition:

AI Changes:
- Large improvements to unit retreat logic


=================================================================
## v0.31
=================================================================

-----------------------------------------------------------------
## Attributes:

General:
- New penetration system changes:
 * High penetration weapons can now deal additional damage to high health targets to speed up medium and heavy armor combat to approximately where it was prior to the implementation of the new penetration system
 * Projectiles with special effects on penetration (critical shot) are no longer a part of the system to make sure they work correctly
 * Fixed an issue where scatter weapon shots would never penetrate
 * Fixed an issue where modded projectiles would never penetrate
 * Fixed an issue where criticals would get applied to unintended entities
 * Ballistic weapons associated with the system can no longer daze the enemy (ISU-152, SU-85, Tiger, Elefant), this is removed because the chance to daze was possible even on penetration which means it happened too often
 * Changed the way range table is calculated for the new penetration system when ranges are -1
 * Added a 40% likelihood to cause a damage engine critical on 15%-0% health range, there is now a total of 60% likelihood that a tank will be disabled in some way when reaching this percentage of health

USF:
- Added 105mm Sherman projectile to the new penetration system

Soviet:
- KV-2 aoe improved:
 * Far aoe range 4.7 -> 6.3
 * Mid aoe range 2.3 -> 2.6
- B4 artillery rework:
 * Barrage rrecharge time reduced 130s -> 90s
 * Precision shot ability removed